<resources>
    <string name="app_name">BeaGroup</string>
    <string name="friend">friend</string>
    <string name="product">product</string>
    <string name="lock">lock</string>
    <string name="account">account</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="user_name">Name</string>
    <string name="login">Button</string>
    <string name="name">Name</string>


    <string name="id">id</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="button">Button</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign">Sign</string>
    <string name="up">up</string>
    <string name="sex">Sex :</string>
    <string name="logo">logo</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="item">item</string>
    <string name="subitem">subitem</string>
    <string name="todo">TODO</string>
    <string name="更改">更改</string>
    <string name="testing">testing</string>
    <string name="mac">mac</string>
    <string name="major">major</string>
    <string name="minor">minor</string>
    <string name="rssi">rssi</string>
    <string name="measuredpower">measuredpower</string>
    <string name="timestamp">timestamp</string>
    <string name="lemon">Lemon</string>
    <string name="b9407f30_f5f8_466e_aff9_25556b57fe6d">B9407F30-F5F8-466E-AFF9-25556B57FE6D</string>
    <string name="B1_info">TextView</string>
    <string name="B2_info">TextView</string>
    <string name="B3_info">TextView</string>
    <string name="search_id">search ID</string>
    <string name="my">MY</string>
    <string name="textview">TextView</string>
    <string name="logout">登出</string>
    <string name="follow">開始追蹤</string>
    <string name="following">已追蹤</string>


</resources>


